--- a/gb/16/12/30/n8646576.md
+++ b/gb/16/12/30/n8646576.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/umgvlm3440/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/umgvlm3440/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/umgvlm3440/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“站坐行卧”的奥妙  一句古谚教你如何养生</h2>
 
 <h6></h6>
 <hr>
-<p>和很多当代心理学家和医生的看法一样，中国古人认为良好的<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E5%A7%BF%E6%80%81.md#1">姿态</a>是保持旺盛活力和心理健康的关键。从中医和传统哲学的角度来看，姿态和步态不仅对健康有着重要影响，人的内在品格从举止风度上也可见一斑。故而中国有着这样的古谚：“站如松，坐如钟，行如风，卧如弓。”</p>
+<p>和很多当代心理学家和医生的看法一样，中国古人认为良好的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A7%BF%E6%80%81.md#1">姿态</a>是保持旺盛活力和心理健康的关键。从中医和传统哲学的角度来看，姿态和步态不仅对健康有着重要影响，人的内在品格从举止风度上也可见一斑。故而中国有着这样的古谚：“站如松，坐如钟，行如风，卧如弓。”</p>
 <p>在教育问题上，中国古人遵循着严格规范：小孩子不仅在技术和理论知识的层面受教，也必须学会自律和言谈举止的得体。</p>
-<p>几千年来的经典除了以伦理、道德和礼仪导正天下，也教授行住坐卧的正确<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E5%A7%BF%E6%80%81.md#1">姿态</a>。个人的修身养性可说中国传统价值观的核心：修炼有素，在精神上臻达完善，物质层面的成就便能水到渠成。这种思维方式，也体现在这四句古谚中。</p>
+<p>几千年来的经典除了以伦理、道德和礼仪导正天下，也教授行住坐卧的正确<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A7%BF%E6%80%81.md#1">姿态</a>。个人的修身养性可说中国传统价值观的核心：修炼有素，在精神上臻达完善，物质层面的成就便能水到渠成。这种思维方式，也体现在这四句古谚中。</p>
 <p><strong>站如松</strong></p>
-<p>无论是在传统儒学，还是道家<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E4%BF%AE%E7%82%BC%E6%96%87%E5%8C%96.md#1">修炼文化</a>中，站如松不仅意味着站直，也有着很深的道德意涵。站桩的要求，就是立地有根基、挺拔、不动摇。这不仅有益脏腑健康，使腹部收束有形，也是坚守正直信念的体现。</p>
+<p>无论是在传统儒学，还是道家<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%AE%E7%82%BC%E6%96%87%E5%8C%96.md#1">修炼文化</a>中，站如松不仅意味着站直，也有着很深的道德意涵。站桩的要求，就是立地有根基、挺拔、不动摇。这不仅有益脏腑健康，使腹部收束有形，也是坚守正直信念的体现。</p>
 <p>领导全中国在二战东亚战场取得胜利的蒋介石，即以身姿挺拔、律己勤奋闻名于世，这些习惯都支持着他在黑暗年代整合全中国团结抗日。</p>
 <p>中医认为，驼背会使胃肠和脊柱过度受压迫，这种由姿态引起的疾病，被古人归纳为过逸（怠惰懒散）导致周身气血不通的表现。</p>
 <p>2015年<ahref="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0116012" target="_blank" rel="noopener noreferrer">英美一项联合研究</a>也发现，婴幼儿的姿态会影响到学习能力，正直的脊柱可以提高他们对新鲜体验的举一反三能力及记忆力。</p>
@@ -17,15 +17,15 @@
 <p>每天花5分钟时间直立，长期来看大大有益脊椎健康。比如当你接听电话时，将肩背部靠在墙上，可以练习挺拔的站姿。</p>
 <figure id="attachment_6499648" aria-describedby="caption-attachment-6499648" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2015/08/1508151510042378.jpg"><img class="wp-image-6499648 size-medium" title="日本投降70周年 民国老照片看抗战胜利" src="https://i.epochtimes.com/assets/uploads/2015/08/1508151510042378-450x339.jpg" alt="日本投降70周年 民国老照片看抗战胜利" width="450" b="339" /></a><figcaption id="caption-attachment-6499648" class="wp-caption-text">1945年8月15日，蒋中正主席发表抗战胜利广播，勉励国人不念旧恶，与人为善。（图片来源：纪念抗日战争暨台湾光复65周年特展专辑）</figcaption></figure>
 <p><strong>坐如钟</strong></p>
-<p>良好的<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E5%9D%90%E5%A7%BF.md#1">坐姿</a>不但体现威仪和素养，也关乎身体重心。窝在沙发里不但没有坐相，也让身体完全失去平衡和重心。</p>
-<p>儒家崇尚礼仪，周礼大量的礼仪规则中就包括着<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E5%9D%90%E5%A7%BF.md#1">坐姿</a>。</p>
+<p>良好的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9D%90%E5%A7%BF.md#1">坐姿</a>不但体现威仪和素养，也关乎身体重心。窝在沙发里不但没有坐相，也让身体完全失去平衡和重心。</p>
+<p>儒家崇尚礼仪，周礼大量的礼仪规则中就包括着<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9D%90%E5%A7%BF.md#1">坐姿</a>。</p>
 <p>在古代中国，汉代以前，无论是席地而坐，还是坐于床榻之上，跪坐（又名平坐、安坐、正坐）都是常态。从养生保健角度看，这种坐姿有助于刺激膝盖周边肌腱、预防关节炎。此外，跪姿也容易保持脊背挺直、气脉畅通，胃、脾、肺和肝脏等可以正常运作，自然百病不侵。</p>
 <figure id="attachment_8646599" aria-describedby="caption-attachment-8646599" style="width: 300px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/12/655px-Emperor_Kangxi_at_his_desk-300x469.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8646599 size-small" src="https://i.epochtimes.com/assets/uploads/2016/12/655px-Emperor_Kangxi_at_his_desk-300x469.jpg" alt="655px-emperor_kangxi_at_his_desk" width="300" b="469" /></a><figcaption id="caption-attachment-8646599" class="wp-caption-text">《康熙帝便装写字像》，清代宫廷画家绘，北京故宫博物院藏。（公有领域）</figcaption></figure>
 <p>对现代人来说，丢弃靠背椅固然不现实，但要保持良好坐姿也不难，像古人那样只坐椅面的前三分之一，就要提醒自己保持平衡和背部直立。</p>
 <p>坐如钟，这一比喻中还有身心层面的深刻内涵。传统修炼多采用盘坐（跏趺坐）。和跪坐以及后来兴起的垂足坐一样，盘坐需要身体保持正直，同时，也需要内心清净，有定力。坐如钟，形容虽然坐得很安稳，却好似感觉不到身体存在一样空灵。</p>
 <figure id="attachment_5680850" aria-describedby="caption-attachment-5680850" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2013/12/1312140248501758.jpg"><img class="wp-image-5680850 size-small" src="https://i.epochtimes.com/assets/uploads/2013/12/1312140248501758-300x450.jpg" width="300" b="450" /></a><figcaption id="caption-attachment-5680850" class="wp-caption-text">图为法轮功学员在盘坐炼功。（大纪元图片库）</figcaption></figure>
 <p><strong>行如风</strong></p>
-<p>在<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E4%BF%AE%E7%82%BC%E6%96%87%E5%8C%96.md#1">修炼文化</a>中，行如风，喻指能正道直行、排除各种外界扰攘，当气脉畅通无阻，便容易体会到走路生风的轻快矫健。</p>
+<p>在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%AE%E7%82%BC%E6%96%87%E5%8C%96.md#1">修炼文化</a>中，行如风，喻指能正道直行、排除各种外界扰攘，当气脉畅通无阻，便容易体会到走路生风的轻快矫健。</p>
 <p><strong>卧如弓</strong></p>
 <p>中国古人的睡姿也有讲究。孔子说不尸卧（注：仰卧）。药王孙思邈从养生角度也主张：“屈膝侧卧，益人气力，胜正偃卧（注：俯卧）。”</p>
 <p>良好的休息姿态是侧卧如弓，关节自然弯曲，全身放松。侧卧有助于保持白天练就的直立姿态，中医也认为最有益气血畅通，而仰卧或俯卧都会有所阻滞。朝右侧卧还有利胃肠对食物的消化吸收，并且避免对心脏的压迫。</p>
@@ -37,47 +37,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/3/18/n4665279.md#1">【剖析党文化】党文化与传统文化格格不入</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/7/16/n8107028.md#1">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/7/28/n8146137.md#1">竹竿型脊椎  僵直性脊椎炎造成</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/8/3/n8163417.md#1">五处粉碎性骨折不治而愈 专家：你不用再看医生了</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/9/11/n8287431.md#1">不一定是五十肩 医师吁肩痛要就医</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/10/4/n8363656.md#1">女性别蹲了  常蹲马桶膝盖更易坏</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/10/17/n8406244.md#1">【千古英雄人物】张三丰(21) 西游仙源</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/10/23/n8423414.md#1">【中国历史正述】导论之三：文化正义</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/11/24/n8524845.md#1">【郑医师骨科漫谈】手不能举高？浅谈冰冻肩</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/21/10/21/n13320495.md#1">摆脱受害者情结吧 别让人生活成一出悲剧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/18/n4665279.md#1">【剖析党文化】党文化与传统文化格格不入</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/7/16/n8107028.md#1">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/7/28/n8146137.md#1">竹竿型脊椎  僵直性脊椎炎造成</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/3/n8163417.md#1">五处粉碎性骨折不治而愈 专家：你不用再看医生了</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/11/n8287431.md#1">不一定是五十肩 医师吁肩痛要就医</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/4/n8363656.md#1">女性别蹲了  常蹲马桶膝盖更易坏</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/17/n8406244.md#1">【千古英雄人物】张三丰(21) 西游仙源</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/23/n8423414.md#1">【中国历史正述】导论之三：文化正义</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/24/n8524845.md#1">【郑医师骨科漫谈】手不能举高？浅谈冰冻肩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/7/n13628948.md#1">情绪能致命也能救命 我母亲的真实故事</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9971114.md#1" target="_blank">文革中自杀的几个名人（6）留美学者陈梦家</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">澳洲各级政要褒奖祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/28/n13611592.md#1">【新闻大家谈】俄亮核武威胁 中共幕后参与？</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607632.md#1">【时事军事】特种部队 俄入侵乌克兰的秘密武器</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604998.md#1">【更新2.25】乌总统：我们不会放下武器</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605502.md#1">北京陷窘境 凌晨发表对乌克兰五点立场声明</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/umgvlm3440/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/umgvlm3440/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/30/n8646576.htm">“站坐行卧”的奥妙  一句古谚教你如何养生</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/30/n8646576.htm">“站坐行卧”的奥妙  一句古谚教你如何养生</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/umgvlm3440/djy/blob/master/gb/16/12/30/n8646576.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/umgvlm3440/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/umgvlm3440/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/12/30/n8646576.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
